# sdk

./: .celestoignore.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: js-test.yml  test.yml
benchmarks/: time_to_interact.py
benchmarks/results/: 2026-04-12_baseline.json  2026-04-12_inline-provisioning.json
js/: README.md  package-lock.json  package.json  test.mjs  tsconfig.json  tsup.config.ts
js/src/: index.ts
js/src/computers/: client.ts  index.ts  terminal.ts  types.ts
js/src/core/: config.ts  errors.ts  http.ts
js/src/gatekeeper/: client.ts  index.ts  types.ts
js/tests/: computers.test.ts  terminal.test.ts
src/celesto/: __init__.py  computer.py  deployment.py  main.py
src/celesto/integrations/openai_agents/: __init__.py  common.py  hosted.py  sandbox.py  smolvm.py
src/celesto/sdk/: __init__.py  client.py  exceptions.py  types.py
src/celesto_sdk/sdk/: client.py
tests/: test_celestoignore.py  test_celestoignore_spec.py  test_openai_agents_integration.py  test_sdk.py
